--- a/views/FAQ.html
+++ b/views/FAQ.html
@@ -120,7 +120,7 @@
                             INNOVISION'19? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq1" class="collapse" data-parent="#faq-list">
                                 <p>
-                                     Ans. INNOVISION,The annual techno-management festival of NIT Rourkela, will be held from 1st
+                                     INNOVISION,The annual techno-management festival of NIT Rourkela, will be held from 1st
                             to 3rd of November.
 
                                 </p>
@@ -132,7 +132,7 @@
                             register for INNOVISION'19? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq2" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    Ans. Please go to sign up option for registration
+                                    Please go to sign up option for registration
 
                                 </p>
                             </div>
@@ -143,7 +143,7 @@
                             is the registration fee?<i class="fa fa-minus-circle"></i></a>
                             <div id="faq3" class="collapse" data-parent="#faq-list">
                                 <p>
-                                   Ans. You will get to know about the fee during registration process.
+                                    The Registration fees is Rs.600 + taxes.
 
                                 </p>
                             </div>
@@ -154,7 +154,7 @@
                             there be accommodation provided? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq4" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    Ans. Yes, accommodation will be provided to the participants in the various halls of
+                                    Yes, accommodation will be provided to the participants in the various halls of
                             residences located within our campus.
                             After registering at our desk, our hospitality team would guide the participants to their
                             allotted halls.
@@ -168,7 +168,7 @@
                             have to pay entry fee for every events? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq5" class="collapse" data-parent="#faq-list">
                                 <p>
-                                     Ans. Actually, there are events which have no entry fees but some events have. It differs
+                                     Actually, there are events which have no entry fees but some events have. It differs
                             for each event.
 
                                 </p>
@@ -180,7 +180,7 @@
                             the refund policy if I don't want to join Innovision'19? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq6" class="collapse" data-parent="#faq-list">
                                 <p>
-                                     Ans. The amount once paid can't be refunded under any circumstances.
+                                     The amount once paid can't be refunded under any circumstances.
                                 </p>
                             </div>
                         </li>
@@ -190,7 +190,7 @@
                             transferable if I don't want to join Innovision'19? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq7" class="collapse" data-parent="#faq-list">
                                 <p>
-                                     Ans. The tickets are non-transferable and non-refundable.
+                                     The tickets are non-transferable and non-refundable.
                                 </p>
                             </div>
                         </li>
@@ -199,8 +199,18 @@
                             <a data-toggle="collapse" href="#faq8" class="collapsed">Is accomodation included in the registration fees? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq8" class="collapse" data-parent="#faq-list">
                                 <p>
-                                     Ans. Yes, Innovision team will take care of the accomodation. 
+                                    Yes, Innovision team will take care of the accomodation. 
                                 However the participants will have to take care of the fooding on their own.
+                                </p>
+                            </div>
+                        </li>
+                    
+                    		<li>
+                            <a data-toggle="collapse" href="#faq9" class="collapsed">When is the last date of payment?<i class="fa fa-minus-circle"></i></a>
+                            <div id="faq9" class="collapse" data-parent="#faq-list">
+                                <p>
+                                   1st November.
+
                                 </p>
                             </div>
                         </li>
