--- a/views/participants-admin/admin_panel.html
+++ b/views/participants-admin/admin_panel.html
@@ -36,6 +36,12 @@
             border-radius: 3px;
             margin: 20px;
         }
+        
+        td {
+            border: 2px solid black;
+            padding: 10px;
+            ;
+        }
     </style>
 </head>
 
@@ -55,9 +61,11 @@
     <div class="container">
         <h2 style="color: red ; text-decoration: underline;"><span style="font-weight: 700;">Note:</span> To search all participants,empty the field and click search !</h2>
         <div class="row">
-        </div>
-        <div class="col-sm-8"><br>
             <div class="x">
+                <div id="hostelTable">
+
+                </div>
+
                 <div class="search" style="margin: 30px;"><br>
                     <input type="text" id="inputId" class="form-control" placeholder="search..">
                     <button class="z" id="searchBtn">search</button>
@@ -79,7 +87,7 @@
                             <th>Checked In?</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="list">
 
                     </tbody>
                 </table>
