profile page changes

--- a/views/profile.html
+++ b/views/profile.html
@@ -106,23 +106,29 @@
             </div>
             <div class="row" style="text-align: center;">
 
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <h3 style="color: white;" id="participant_name"></h3>
                     <h3 style="color: white;" id="participant_email"></h3>
                     <h3 style="color: white;" id="participant_college"></h3>
                     <h3 style="color: white;" id="participant_id"></h3>
                 	<h3 style="color: white;" id="participant_ca_id"></h3>
                     <br><br>
-<!--                 <h2 style="color:white">Payment is temporarily disabled !</h2> -->
+                </div>
+                <div class="col-md-6">
+                    
                     <a id="paymentBtn"  class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
-                    <h2 id="paidMsg" style="color:white">You have already Paid !</h2>
                     <button class="about-btn" style="background-color: black;" id="ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
+                    
+                    <div class="ca">
+                        <h3 style="color: white;" id="under_CA"></h3>
+                        <button class="about-btn" style="background-color: black;" id="ca_button1">&nbsp; edit &nbsp;</button>
+                    </div>
+                    
+                    <h3 style="color: white;" id="ticket"></h3>
+                    <h3 style="color: white;" id="planet"></h3>
+
                 </div>
-                <div class="col-md-4">
-                    <center>
-                        <img id="qr_image" src=" " style="position: relative;" />
-                    </center>
-                </div>
+
             </div>
             
 
