--- a/views/profile.html
+++ b/views/profile.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
-	<meta http-equiv="expires" content="0">
+    <meta http-equiv="expires" content="0">
 
     <!-- Favicons -->
     <link href="../assets/images/Innovision_Logo.ico" rel="icon">
@@ -62,15 +62,15 @@
                         <div class="dropdown-content">
                             <a href="eventsSection.html#schedule">Event Schedule</a>
                             <a href="eventsSection.html#flagships1">Flagship Events</a>
-                        	<a href="eventsSection.html#preinnoevents1">Pre-inno Events</a>
+                            <a href="eventsSection.html#preinnoevents1">Pre-inno Events</a>
                             <a href="eventsSection.html#events1">Events</a>
                             <a href="eventsSection.html#workshops1">Workshops</a>
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
-                        	<a href="eventsSection.html#guestlect">Guest Lectures</a>
+                            <a href="eventsSection.html#guestlect">Guest Lectures</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="eventsSection.html#cultural1">Pro Shows</a>
-                        	<a href="eventsSection.html#funevents1">Fun Events</a>
-                        	<a href="eventsSection.html#special1">Special Events</a>
+                            <a href="eventsSection.html#funevents1">Fun Events</a>
+                            <a href="eventsSection.html#special1">Special Events</a>
 
                         </div>
 
@@ -106,25 +106,30 @@
             </div>
             <div class="row" style="text-align: center;">
 
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <h3 style="color: white;" id="participant_name"></h3>
                     <h3 style="color: white;" id="participant_email"></h3>
                     <h3 style="color: white;" id="participant_college"></h3>
                     <h3 style="color: white;" id="participant_id"></h3>
-                	<h3 style="color: white;" id="participant_ca_id"></h3>
-                    <br><br>
-<!--                 <h2 style="color:white">Payment is temporarily disabled !</h2> -->
-                    <a id="paymentBtn"  class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
-                    <h2 id="paidMsg" style="color:white">You have already Paid !</h2>
+                    <h3 style="color: white;" id="participant_ca_id"></h3>
+                </div>
+                <div class="col-md-6">
+
+                    <a id="paymentBtn" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a>
                     <button class="about-btn" style="background-color: black;" id="ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
+
+                    <div class="ca">
+                        <h3 style="color: white;" id="under_CA"></h3>
+                        <button class="about-btn" style="background-color: black;" id="ca_button2">edit</button>
+                    </div>
+
+                    <h3 style="color: white;" id="ticket"></h3>
+                    <h3 style="color: white;" id="planet"></h3>
+
                 </div>
-                <div class="col-md-4">
-                    <center>
-                        <img id="qr_image" src=" " style="position: relative;" />
-                    </center>
-                </div>
+
             </div>
-            
+
 
 
         </div>
