--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1011,7 +1011,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #venue .venue-gallery img {
     width: 100%;
-    height: 300px;
+    height: 400px;
     object-fit: cover;
     transition: all ease-in-out 0.4s;
 }
@@ -1861,4 +1861,35 @@ a:hover {
 
 .requirements .row {
     padding: 20px;
+}
+
+
+#pro {
+    padding: 110px 0 100px;
+}
+
+#pro .container-fluid {
+    margin-bottom: 3px;
+}
+
+#pro .venue-gallery-container {
+    padding-right: 12px;
+}
+
+#pro .venue-gallery {
+    overflow: hidden;
+    border-right: 3px solid #fff;
+    border-bottom: 3px solid #fff;
+}
+
+#pro .venue-gallery img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    transition: all ease-in-out 0.4s;
+}
+
+#pro .venue-gallery:hover img {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
