--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -104,151 +104,147 @@
 
     <br><br><br>
 
-                                  <section id="supporters" class="section-with-bg wow fadeInUp">
-                                      <div class="container">
-                                          <div class="section-header">
-                                              <h2>Our Previous Sponsors</h2>
-                                          </div>
+    <section id="supporters" class="section-with-bg wow fadeInUp">
+        <div class="container">
+            <div class="section-header">
+                <h2>Media Partners and Collaboration</h2>
+            </div>
 
-                                          <div class="row no-gutters supporters-wrap clearfix">
+            <div class="row no-gutters supporters-wrap clearfix">
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/bb.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/1.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/lic.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/2.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/mayfair.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/3.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/ovotees.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/4.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/radhika.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/5.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/radio.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/6.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/rourkela tips.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/7.png" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/sambad.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images//sponsors/sbi.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/teeshood.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/travel.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/sponsors/wisdomware.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-                                          </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/media_partners/8.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
 
-                                      </div>
-                                      <br><br>
+            </div>
+
+        </div>
 
     </section>
 
+     <section id="supporters" class="section-with-bg wow fadeInUp">
+         <div class="container">
+             <div class="section-header">
+                 <h2>Our Previous Sponsors</h2>
+             </div>
+
+             <div class="row no-gutters supporters-wrap clearfix">
+
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/lic.jpg" class="img-fluid" alt="">
+                     </div>
+                 </div>
+
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/mayfair.jpg" class="img-fluid" alt="">
+                     </div>
+                 </div>
+
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/ovotees.png" class="img-fluid" alt="">
+                     </div>
+                 </div>
+
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/radhika.png" class="img-fluid" alt="">
+                     </div>
+                 </div>
+
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/radio.png" class="img-fluid" alt="">
+                     </div>
+                 </div>
+
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/rourkela tips.jpg" class="img-fluid" alt="">
+                     </div>
+                 </div>
+
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/sambad.jpg" class="img-fluid" alt="">
+                     </div>
+                 </div>
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images//sponsors/sbi.png" class="img-fluid" alt="">
+                     </div>
+                 </div>
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/teeshood.png" class="img-fluid" alt="">
+                     </div>
+                 </div>
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/travel.png" class="img-fluid" alt="">
+                     </div>
+                 </div>
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                     <div class="supporter-logo">
+                         <img src="../assets/images/sponsors/wisdomware.png" class="img-fluid" alt="">
+                     </div>
+                 </div>
+             </div>
+
+         </div>
+         <br><br>
+
+     </section>
 
 
-                    <section id="supporters" class="section-with-bg wow fadeInUp">
-                                      <div class="container">
-                                          <div class="section-header">
-                                              <h2>Media Partners and Collaboration</h2>
-                                          </div>
 
-                                          <div class="row no-gutters supporters-wrap clearfix">
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/1.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/2.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/3.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/4.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/5.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/6.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/7.png" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
-                                                  <div class="supporter-logo">
-                                                      <img src="../assets/images/media_partners/8.jpg" class="img-fluid" alt="">
-                                                  </div>
-                                              </div>
-                                              
-                                          </div>
-
-                                      </div>
-
-    </section><br><br>
+    <br><br>
 
 
 
