--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -103,7 +103,7 @@
 }
 
 .ca {
-    margin: auto 50px;
+    margin: auto 5em;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -111,6 +111,12 @@
 
 #under_CA {
     margin: 0;
+    font-size: 1.5rem;
+}
+
+#ticket {
+    font-size: 1.2rem;
+    margin: 1em;
 }
 
 #ca_button1:hover,
@@ -131,13 +137,23 @@ input[type=number]::-webkit-outer-spin-button {
         border-radius: 0.75em;
         padding: 0.5em;
     }
+    .ca {
+        margin: auto 0.95em;
+    }
+    #under_CA {
+        font-size: 1.3rem;
+    }
     .ca #editCaButton {
-        font-size: 1rem;
+        font-size: 1.1rem;
         background-color: black;
         padding: 0.1em 2em;
     }
     #ca_button2 {
         font-size: 1rem;
         padding: 0.1em 1em;
+    }
+    #ticket {
+        font-size: 1.5rem;
+        margin: 0.75em;
     }
 }
