under ca participant list

--- a/views/participants-admin/admin_panel.html
+++ b/views/participants-admin/admin_panel.html
@@ -67,7 +67,8 @@
                 </div>
 
                 <div class="search" style="margin: 30px;"><br>
-                    <input type="text" id="inputId" class="form-control" placeholder="search..">
+                    <input type="text" id="inputId" class="form-control" placeholder="search by inno_id"><br>
+                    <input type="text" id="inputCAId" class="form-control" placeholder="search by under Ca_id">
                     <button class="z" id="searchBtn">search</button>
                     <button class="z submit_button">Update</button>
                     <h2>Paid participants <span id="paidCount"></span></h2>
