different token for ca admin

--- a/views/ca/admin/ca_individual.html
+++ b/views/ca/admin/ca_individual.html
@@ -46,7 +46,7 @@
     </script>
     <script>
         $(document).ready(function() {
-            if (!(localStorage.cms_token)) window.location.assign("./index.html");
+            if (!(localStorage.ca_token)) window.location.assign("./index.html");
         });
     </script>
 </body>
