--- a/views/ca/admin/CAList.html
+++ b/views/ca/admin/CAList.html
@@ -56,7 +56,7 @@
     </script>
     <script>
         $(document).ready(function() {
-            if (!(localStorage.cms_token)) window.location.assign("./index.html");
+            if (!(localStorage.ca_token)) window.location.assign("./index.html");
         });
     </script>
 </body>
