--- a/views/profile.html
+++ b/views/profile.html
@@ -116,6 +116,7 @@
                 <div class="col-md-6">
 
                     <a id="paymentBtn" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a>
+<!--                 <p style="color:white;">* Payment and Accomodation is closed till further notice.</p> -->
                     <button class="about-btn" style="background-color: black;" id="ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
 
                     <div class="ca">
