--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -448,14 +448,33 @@
            &copy; Copyright <strong>National Institute of Technology, Rourkela</strong>.
          </div>
          <div class="credits">
-           <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
-        -->
-           Designed by <a href="#">Innovision Tech Team</a>
-         </div>
+                Designed by <a href="#">Innovision Tech Team</a>
+                <!-- Trigger the modal with a button -->
+                <a style="display:block;"  data-toggle="modal" data-target="#myModal">Privacy Policy</a> 
+
+                <!-- Modal -->
+                <div id="myModal" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header" style="display: block;">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Privacy Policy</h4>
+                      </div>
+                      <div class="modal-body">
+                        <p style="color:black;">We are using <a href="https://www.thecollegefever.com/">TheCollegeFever(TCF)</a> as the payment solution for Innovision.
+For that purpose we share your personal information like name,email,phone number,address with TCF
+With the notice that your information is shared with TCF, if your personal information/data is misused or used unwantedly by TCF in <b>ANY MEANS</b> Team Innovision and NIT Rourkela wont be responsible for that, TCF would be responsible solely for any such actions/incidents.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+            </div>
        </div>
      </footer>
      <!-- #footer -->
